--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "express": "^4.19.2",
     "moment": "^2.30.1",
     "next": "14.2.5",
     "react": "^18",
